# projet_tsi

./: 20211207_161548.ppm  20211207_162203.ppm  main.cpp
data/: nathan.tga  route.tga  route1.tga
shaders/: shader.frag
src/: declaration.h  main.cpp
tools/: CMakeLists.txt  glhelper.cpp  glhelper.hpp  mat4.cpp  mat4.hpp  mesh.cpp  mesh.hpp  tga.cpp  triangle_index.cpp  triangle_index.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vertex_opengl.cpp  vertex_opengl.hpp
tools/format/: mesh_io_obj.cpp  mesh_io_obj.hpp  mesh_io_off.cpp  mesh_io_off.hpp
